profilelist1exp/unpackaged/objects/Marketing_Plan__c.object
<CustomObject>
    <description>Viper Project</description>
    <fields>
        <fullName>Available_Action_1__c</fullName>
        <formula>HYPERLINK(&apos;/apex/MPRuleHeader?id=&apos;+ Id ,IMAGE(&quot;/resource/1298546011000/AssignRule&quot;, &apos;Click to assign rule&apos;),&apos;_parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Action:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Action_2__c</fullName>
        <formula>IF( OR (AND (OR (ISPICKVAL(Contract_Type__c,&apos;Volume Based&apos;), ISPICKVAL(Contract_Type__c,&apos;Ala Carte&apos;),ISPICKVAL(Contract_Type__c,&apos;Headcount&apos;)), Display_SOW_Button__c ) , ISPICKVAL(Contract_Type__c, &apos;Rebates&apos;),ISPICKVAL(Contract_Status__c,&apos;Reviewed&apos;)) ,
HYPERLINK(&apos;/apex/SOWHeadCount_Validation?id=&apos; &amp; Id ,
IMAGE( &quot;/resource/1298546011000/GenerateSOW&quot;, &apos;Generate SOW&apos;)) ,&apos;None &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Action:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Action_3__c</fullName>
        <formula>HYPERLINK(&apos;/apex/marketingPlanDelete?id=&apos;+ Id,IMAGE(&quot;/resource/1298546011000/DeleteMdfPgm&quot;, &apos;Delete&apos;),&apos;_parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Action:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <label>Bill-To Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Cell__c</fullName>
        <label>Billing Contact Cell #</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Country__c</fullName>
        <label>Billing Contact Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <label>Billing Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Name__c</fullName>
        <label>Billing Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone__c</fullName>
        <label>Billing Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Title__c</fullName>
        <label>Billing Contact Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Fax__c</fullName>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Marketing_manager_Email__c</fullName>
        <label>Co Marketing manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted for Review</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Cancelled / Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volume Based</fullName>
                </value>
                <value>
                    <fullName>Ala Carte</fullName>
                </value>
                <value>
                    <fullName>Headcount</fullName>
                </value>
                <value>
                    <fullName>Rebates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_SOW_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display SOW Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FQ_Sort__c</fullName>
        <formula>VALUE(MID( TEXT(Fiscal_Quarter__c) ,3,2)&amp;RIGHT(TEXT(Fiscal_Quarter__c),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This column does not have any business relevance.</inlineHelpText>
        <label>Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Quarter__c</fullName>
        <label>Financial Quarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter_Term__c</fullName>
        <label>Fiscal Quarter Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <label>Fiscal Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12Q1</fullName>
                </value>
                <value>
                    <fullName>FY12Q2</fullName>
                </value>
                <value>
                    <fullName>FY12Q3</fullName>
                </value>
                <value>
                    <fullName>FY12Q4</fullName>
                </value>
                <value>
                    <fullName>FY13Q1</fullName>
                </value>
                <value>
                    <fullName>FY13Q2</fullName>
                </value>
                <value>
                    <fullName>FY13Q3</fullName>
                </value>
                <value>
                    <fullName>FY13Q4</fullName>
                </value>
                <value>
                    <fullName>FY14Q1</fullName>
                </value>
                <value>
                    <fullName>FY14Q2</fullName>
                </value>
                <value>
                    <fullName>FY14Q3</fullName>
                </value>
                <value>
                    <fullName>FY14Q4</fullName>
                </value>
                <value>
                    <fullName>FY15Q1</fullName>
                </value>
                <value>
                    <fullName>FY15Q2</fullName>
                </value>
                <value>
                    <fullName>FY15Q3</fullName>
                </value>
                <value>
                    <fullName>FY15Q4</fullName>
                </value>
                <value>
                    <fullName>FY16Q1</fullName>
                </value>
                <value>
                    <fullName>FY16Q2</fullName>
                </value>
                <value>
                    <fullName>FY16Q3</fullName>
                </value>
                <value>
                    <fullName>FY16Q4</fullName>
                </value>
                <value>
                    <fullName>FY17Q1</fullName>
                </value>
                <value>
                    <fullName>FY17Q2</fullName>
                </value>
                <value>
                    <fullName>FY17Q3</fullName>
                </value>
                <value>
                    <fullName>FY17Q4</fullName>
                </value>
                <value>
                    <fullName>FY18Q1</fullName>
                </value>
                <value>
                    <fullName>FY18Q2</fullName>
                </value>
                <value>
                    <fullName>FY18Q3</fullName>
                </value>
                <value>
                    <fullName>FY18Q4</fullName>
                </value>
                <value>
                    <fullName>FY19Q1</fullName>
                </value>
                <value>
                    <fullName>FY19Q2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Marketing Plans</relationshipLabel>
        <relationshipName>Marketing_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MP_Status__c</fullName>
        <description>Used in Custom Code in MP VF page.</description>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing_Contact_Address__c</fullName>
        <label>Primary Marketing Contact : Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing_Contact_Cell__c</fullName>
        <label>Primary Marketing Contact : Cell#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing_Contact_City__c</fullName>
        <label>Primary Marketing Contact : City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing_Contact_Country__c</fullName>
        <label>Primary Marketing Contact  Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing_Contact_E_mail__c</fullName>
        <label>Primary Marketing Contact E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing_Contact_Fax__c</fullName>
        <label>Primary Marketing Contact  Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing_Contact_Name__c</fullName>
        <label>Primary Marketing Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing_Contact_Phone__c</fullName>
        <label>Primary Marketing Contact  Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing_Contact_State__c</fullName>
        <label>Primary Marketing Contact : State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing_Contact_Title__c</fullName>
        <label>Primary Marketing Contact : Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing_Contact_Zip__c</fullName>
        <label>Primary Marketing Contact : Zip</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Manager_Approval_Status__c</fullName>
        <label>Product Manager Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Submitted for Product Manager Review</fullName>
                </value>
                <value>
                    <fullName>Product Manager Reviewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <label>Product Manager</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <inlineHelpText>Please enter PO if PO is required for invoicing. If PO is not required for invoicing please enter NA.</inlineHelpText>
        <label>Purchase Order #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Rule_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rebate Rule Header</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Rebate Rule Header must have with same Fiscal Quarter,Region and Vendor of the Marketing Plan</errorMessage>
            <filterItems>
                <field>Rebate_Rule_Header__c.Fiscal_Quarter__c</field>
                <operation>equals</operation>
                <valueField>$Source.Fiscal_Quarter__c</valueField>
            </filterItems>
            <filterItems>
                <field>Rebate_Rule_Header__c.Region__c</field>
                <operation>equals</operation>
                <valueField>$Source.Region__c</valueField>
            </filterItems>
            <filterItems>
                <field>Rebate_Rule_Header__c.Vendor__c</field>
                <operation>equals</operation>
                <valueField>$Source.Vendor__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Rebate_Rule_Header__c</referenceTo>
        <relationshipLabel>Marketing Plans</relationshipLabel>
        <relationshipName>Marketing_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                    <default>true</default>
                    <label>Americas</label>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reply_Method__c</fullName>
        <description>Field to replace the hard coded component &quot;When signed, fax to: 512.283.9289&quot; from all SOW templates.</description>
        <label>Reply Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Sent_To_Email__c</fullName>
        <description>STORY - 3055069 - VIPER - Ability to set reminders while sending Marketing Plans for review - Dev Field to get all approver email address</description>
        <label>Review Sent To (Email)</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Sent_To_Vendor__c</fullName>
        <label>Review Sent To (Vendor)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Review_Reminder__c</fullName>
        <description>STORY - 3055069 - VIPER - Ability to set reminders while sending Marketing Plans for review</description>
        <label>Send Review Reminder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Signed_SOW_To_Product_Manager__c</fullName>
        <formula>HYPERLINK(&apos;/apex/ProductManagerUtilsPage?id=&apos;+ Id+&apos;&amp;param2=signSow&apos; ,IMAGE(&quot;/resource/1310036932000/ViperSignedSOW1&quot;, &apos;Send Signed SOW To Product Manager&apos;),&apos;_parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_for_Product_Manager_Approval__c</fullName>
        <formula>HYPERLINK(&apos;/apex/ProductManagerUtilsPage?id=&apos;+ Id+&apos;&amp;param2=approval&apos; ,IMAGE(&quot;/resource/1310036932000/VIPERProductManager1&quot;, &apos;Send for product manager review&apos;),&apos;_parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                    <default>true</default>
                    <label>North America</label>
                </value>
                <value>
                    <fullName>UK-I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueFieldVolumeBased__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UniqueFieldVolumeBased</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Marketing Plans</relationshipLabel>
        <relationshipName>Marketing_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volume_Based_Rule_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Based Rule Header</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <errorMessage>Volume Based Rule should be in the same Fiscal Quarter and Region and Sub Vendor of the Marketing Plan.</errorMessage>
            <filterItems>
                <field>Volume_Based_Rule_Header__c.Fiscal_Quarter__c</field>
                <operation>equals</operation>
                <valueField>$Source.Fiscal_Quarter__c</valueField>
            </filterItems>
            <filterItems>
                <field>Volume_Based_Rule_Header__c.Vendor__c</field>
                <operation>equals</operation>
                <valueField>$Source.Vendor__c</valueField>
            </filterItems>
            <filterItems>
                <field>Volume_Based_Rule_Header__c.Region__c</field>
                <operation>equals</operation>
                <valueField>$Source.Region__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Volume_Based_Rule_Header__c</referenceTo>
        <relationshipLabel>Marketing Plans</relationshipLabel>
        <relationshipName>Marketing_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Marketing Plan</label>
    <nameField>
        <label>Marketing Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Plans</pluralLabel>
    <recordTypes>
        <fullName>Ala_Carte_Marketing_Plan</fullName>
        <active>true</active>
        <description>Programs offered to partner on an individually priced basis</description>
        <label>Ala Carte Marketing Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Headcount_Marketing_Plan</fullName>
        <active>true</active>
        <description>Exclusively for dedicated funded resource agreements</description>
        <label>Headcount Marketing Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebates_Marketing_Plan</fullName>
        <active>true</active>
        <description>Exclusively for rebate agreements</description>
        <label>Rebates Marketing Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volume_Based_Marketing_Plan</fullName>
        <active>true</active>
        <description>Programs offered to partner through a percentage calculation based on sales volume</description>
        <label>Volume Based Marketing Plan</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>VR_Billing_Zip_field_Validation</fullName>
        <active>false</active>
        <description>allow users to enter only numbers in the Billing Zip and Primary Marketing Contact : Zip fields.</description>
        <errorConditionFormula>( LEN( Billing_Zip__c) &gt;0  &amp;&amp;  NOT( ISNUMBER(Billing_Zip__c) ) )</errorConditionFormula>
        <errorDisplayField>Billing_Zip__c</errorDisplayField>
        <errorMessage>Please enter only numbers in the Zip field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Primary_MarketingZip_field_Validation</fullName>
        <active>false</active>
        <description>allow users to enter only numbers in the  Primary Marketing Contact : Zip fields.</description>
        <errorConditionFormula>( LEN( Primary_Marketing_Contact_Zip__c ) &gt;0  &amp;&amp;  NOT( ISNUMBER(Primary_Marketing_Contact_Zip__c) ) )</errorConditionFormula>
        <errorDisplayField>Primary_Marketing_Contact_Zip__c</errorDisplayField>
        <errorMessage>Please enter only numbers in the Zip field</errorMessage>
    </validationRules>
</CustomObject>